Update the webpage (jerryscript.net)
JerryScript-DCO-1.0-Signed-off-by: Laszlo Lango laszlo.lango@h-lab.eu

--- a/05.PORT-API.md
+++ b/05.PORT-API.md
@@ -16,6 +16,13 @@ It is questionable whether a library should be able to terminate an application.
 
 ```c
 /**
+ * Init the program
+ */
+void jerry_port_init (void);
+```
+
+```c
+/**
  * Signal the port that jerry experienced a fatal failure from which it cannot
  * recover.
  *
@@ -124,18 +131,6 @@ void jerry_port_context_free (void);
  * the console, or saved to a database or to a file.
  */
 void jerry_port_log (const char *message_p);
-```
-
-```c
-/**
- * Print a single character to standard output.
- *
- * This port function is never called from jerry-core directly, it is only used by jerry-ext components to print
- * information.
- *
- * @param byte: the byte to print.
- */
-void jerry_port_print_byte (jerry_char_t byte);
 ```
 
 ```c
