--- a/13.DEBUGGER-TRANSPORT.md
+++ b/13.DEBUGGER-TRANSPORT.md
@@ -87,7 +87,8 @@ the `header_p->next_p->send()` method.
 
 ```c
 typedef bool (*jerry_debugger_transport_send_t) (struct jerry_debugger_transport_interface_t *header_p,
-                                                 uint8_t *message_p, size_t message_length);
+                                                 uint8_t *message_p,
+                                                 size_t message_length);
 ```
 
 ## jerry_debugger_transport_receive_t
@@ -117,8 +118,10 @@ will be the first item of the interface chain.
 
 ```c
 void jerry_debugger_transport_add (jerry_debugger_transport_header_t *header_p,
-                                   size_t send_message_header_size, size_t max_send_message_size,
-                                   size_t receive_message_header_size, size_t max_receive_message_size);
+                                   size_t send_message_header_size,
+                                   size_t max_send_message_size,
+                                   size_t receive_message_header_size,
+                                   size_t max_receive_message_size);
 ```
 
 - `header_p`: header of a transportation interface.
