--- a/07.DEBUGGER.md
+++ b/07.DEBUGGER.md
@@ -110,7 +110,8 @@ typedef jerry_value_t
 (*jerry_debugger_wait_for_source_callback_t) (const jerry_char_t *source_name_p,
                                               size_t source_name_size,
                                               const jerry_char_t *source_p,
-                                              size_t source_size, void *user_p);
+                                              size_t source_size,
+                                              void *user_p);
 ```
 
 - `source_name_p` - source (usually a file) name of the source code
@@ -303,7 +304,8 @@ return value of the function.
 ```c
 jerry_debugger_wait_for_source_status_t
 jerry_debugger_wait_for_client_source (jerry_debugger_wait_for_source_callback_t callback_p,
-                                       void *user_p, jerry_value_t *return_value)
+                                       void *user_p,
+                                       jerry_value_t *return_value)
 ```
 
 **Example**
@@ -395,7 +397,7 @@ Sends the program's output to the debugger client.
 
 ```c
 void
-jerry_debugger_send_output (const jerry_char_t *buffer, jerry_size_t string_size)
+jerry_debugger_send_output (const jerry_char_t *buffer, jerry_size_t str_size)
 ```
 
 **Example**
