--- a/12.EXT-REFERENCE-MODULE.md
+++ b/12.EXT-REFERENCE-MODULE.md
@@ -73,7 +73,7 @@ to `jerryx_module_resolve` with a module name whose canonical name matches an al
 ```c
 jerry_value_t
 jerryx_module_resolve (const jerry_value_t name,
-                       const jerryx_module_resolver_t *resolvers_p,
+                       const jerryx_module_resolver_t **resolvers_p,
                        size_t resolver_count);
 ```
 
@@ -94,7 +94,7 @@ Remove a module from the current context's cache, or clear the cache entirely.
 ```c
 void
 jerryx_module_clear_cache (const jerry_value_t name,
-                           const jerryx_module_resolver_t *resolvers_p,
+                           const jerryx_module_resolver_t **resolvers_p,
                            size_t resolver_count);
 ```
 
